first release with chapter on Getting Spoofax

--- a/decl-your-lang/Makefile
+++ b/decl-your-lang/Makefile
@@ -1,4 +1,8 @@
 all : 
 	pdflatex book
+	bibtex book
 	
 	
+bib: 
+	 curl -o bibliography.bib http://researchr.org/downloadbibtex/bibliography/metaborg-book
+	 
