--- a/languages/LanguageD/.gitignore
+++ b/languages/LanguageD/.gitignore
@@ -27,3 +27,6 @@ lib/runtime
 lib/*.generated.str
 lib-refactoring/*.generated.str
 /src-gen
+/include/
+trans/check/names.str
+trans/check/types.generated.str
