--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ decl-your-lang/book.toc
 decl-your-lang/questions
 ebooks
 languages/LanguageE/editor/java/ds/generated
+languages/paplj/paplj-exercises/.cache
+languages/paplj/paplj-examples/.cache
+languages/paplj/paplj.full/editor/java/ds/generated
