--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ languages/LanguageE/editor/java/ds/generated
 languages/paplj/paplj-exercises/.cache
 languages/paplj/paplj-examples/.cache
 languages/paplj/paplj.full/editor/java/ds/generated
+types.generated.str
