--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ languages/paplj/paplj-exercises/.cache
 languages/paplj/paplj-examples/.cache
 languages/paplj/paplj.full/editor/java/ds/generated
 types.generated.str
+*.aterm
