--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ languages/paplj/paplj-examples/.cache
 languages/paplj/paplj.full/editor/java/ds/generated
 types.generated.str
 *.aterm
+languages/paplj/paplj-exercises-semantics/.cache
