--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ languages/paplj/paplj.full/editor/java/ds/generated
 types.generated.str
 *.aterm
 languages/paplj/paplj-exercises-semantics/.cache
+languages/paplj/paplj-exercises-types/.cache
