--- a/languages/paplj/paplj-exercises-semantics/.project
+++ b/languages/paplj/paplj-exercises-semantics/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>paplj-exercises-semantics</name>
+	<name>paplj.semantics.exercises</name>
 	<comment></comment>
 	<projects>
 	</projects>
