--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ languages/paplj/paplj-exercises-types/.cache
 languages/paplj/paplj-exercises-names/.cache
 languages/paplj/paplj.semantics/editor/java/ds/generated
 sub.generated.str
+languages/paplj/paplj-spoofax.zip
