--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ decl-your-lang/book.toc
 decl-your-lang/questions
 ebooks
 languages/LanguageE/editor/java/ds/generated
+languages/ExerciseE/editor/java/ds/generated/interpreter
