--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ languages/paplj/paplj-exercises-names/.cache
 
 sub.generated.str
 languages/paplj/paplj-spoofax.zip
+languages/paplj.core/paplj.core.full/editor/java/ds/generated
