--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ languages/paplj/paplj-exercises-names/.cache
 sub.generated.str
 languages/paplj/paplj-spoofax.zip
 languages/paplj.core/paplj.core.full/editor/java/ds/generated
+paplj/paplj-exercises/.cache
