--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ paplj/paplj-exercises/.cache
 paplj/paplj.analysis/editor/java/ds/generated
 paplj/paplj.semantics/editor/java/ds/generated
 paplj/paplj.transformation/editor/java/ds/generated
+paplj/paplj-examples/.cache
